--- a/views/wikipage.html
+++ b/views/wikipage.html
@@ -8,6 +8,6 @@
   <div>PLACEHOLDER AUTHOR NAME WITH LINK TO AUTHOR PAGE</div>
   <div class="page-body">PLACEHOLDER PAGE CONTENT</div>
   <hr/>
-  <a href="PLACEHOLDER_URL_TITLE/edit" class="btn btn-primary">edit this page</a>
+  <a href="{{ page.route }}/edit" class="btn btn-primary">edit this page</a>
   <a href="PLACEHOLDER_URL_TITLE/delete" class="btn btn-danger">delete this page</a>
 {% endblock %}
