--- a/views/users.html
+++ b/views/users.html
@@ -1,14 +1,14 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <h3>Pages</h3>
+  <h3>User Page</h3>
   <hr>
   <ul class="list-unstyled">
-    <!-- PLACEHOLDER LIST OF PAGES -->
     <!-- I added Nunjucks for..in loop below -->
     <ul>
-      {% for page in pages %}
-        <li><a href="{{page.route}}"> {{page.title}} </a></li>
+    <ul>
+      {% for user in users %}
+        <li><a href="/users/{{user.id}}"> {{user.name}} </a></li>
       {% endfor %}
     </ul>
 
