fixed form to submit user

--- a/views/addpage.html
+++ b/views/addpage.html
@@ -6,9 +6,9 @@
   <form method="POST" action="/wiki/">
 
     <div class="form-group"> <!--PLACEHOLDER FOR AUTHOR NAME FIELD-->
-       <label for="author" class="col-sm-2 control-label">Page Author</label>
+       <label for="name" class="col-sm-2 control-label">Page Author</label>
       <div class="col-sm-10">
-        <input name="author" type="text" class="form-control"/>
+        <input name="name" type="text" class="form-control"/>
       </div>
     </div>
 
