--- a/views/addpage.html
+++ b/views/addpage.html
@@ -41,6 +41,13 @@
       </div>
     </div>
 
+    <div class="form-group"><!--PLACEHOLDER FOR TAGS FIELD-->
+      <label for="tags" class="col-sm-2 control-label">Tags</label>
+      <div class="col-sm-10">
+        <input name="tags" type="text" class="form-control"/>
+      </div>
+    </div>
+
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">submit</button>
     </div>
